GMM_Main/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>CNCS_Child_Program_Code__c</fullName>
        <formula>CNCS_Child_Program_Name__r.Code_Child__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Child Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Child_Program_Name1__c</fullName>
        <formula>CNCS_Child_Program_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Child Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Child_Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Child Program Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (CNCS Corpoate Program Name)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program_Code__c</fullName>
        <formula>CNCS_Corporate_Program_Name_1__r.Code_Corporate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Corporate Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program_Name_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Corporate Program Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (CNCS CORPORATE PROGRAM)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program_Name__c</fullName>
        <formula>CNCS_Corporate_Program_Name_1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Corporate Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Program_Code__c</fullName>
        <formula>CNCS_Program_Name_1__r.Code_CNCS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Program_Name_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Program Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (CNCS Child Program)</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Program_Name__c</fullName>
        <formula>CNCS_Program_Name_1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_CNCS__c</fullName>
        <label>Code 4 Char</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Child__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Corporate__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Corporate_Program_ID__c</fullName>
        <label>Corporate Program ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_formula__c</fullName>
        <formula>Director_ID__r.FirstName &amp;&quot; &quot;&amp; Director_ID__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <label>Short Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street_Address_Line_1__c</fullName>
        <label>Street Address Line 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Line_2__c</fullName>
        <label>Street Address Line 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Director_ID__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Code_Corporate__c</columns>
        <columns>Short_Code__c</columns>
        <columns>CNCS_Corporate_Program_Name_1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Corporate Programs</label>
    </listViews>
    <recordTypes>
        <fullName>Child_Program</fullName>
        <active>true</active>
        <label>Child Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate_Program</fullName>
        <active>true</active>
        <label>Corporate Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <label>Program</label>
    </recordTypes>
</CustomObject>